--- a/main.css
+++ b/main.css
@@ -203,3 +203,23 @@
   width: 100%;
   background-color: #eef4ff;
 }
+
+.mockup-3-container .submit-container {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.mockup-3-container button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-left: 15px;
+  border: none;
+  width: 150px;
+  height: 40px;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #3b82f6;
+}
