--- a/main.css
+++ b/main.css
@@ -6,6 +6,14 @@
   list-style: none;
 }
 
+main {
+  padding: 20px;
+}
+
+.mockup-container {
+  margin-bottom: 30px;
+}
+
 .mockup-1-container {
   width: 580px;
   padding: 100px 80px;
